# django-stomp-debug-callback

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  README.md  azure-pipeline.yaml  docker-compose.yml  exemple-azure-pipelines.yml  gunicorn_config.py  manage.py  pyproject.toml  pytest.ini  setup.cfg  sonar-project.properties  tox.ini
.github/: dependabot.yml  pull_request_template.md
django_stomp_debug_callback/: apps.py  utils.py  views.py
django_template/: settings.py  urls.py  wsgi.py
django_template/apps/example/: models.py
django_template/apps/example/api/v1/: standard_views.py
django_template/apps/example/migrations/: 0001_initial.py
scripts/: wait-for-it.sh
scripts/consumers/: README.md
tests/: client_conftest.py  conftest.py  utils.py
tests/integration/: test_settings.py  test_urls.py  test_views.py
tests/integration/apps/core/api/v1/: test_standard_views.py
tests/unit/: test_apps.py  test_utils.py  test_views.py
