[tool.poetry]
name = "django-stomp-debug-callback"
version = "1.0.0"
description = "A simple view to help know what the callback is doing on django-stomp usage"
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
homepage = "https://github.com/juntossomosmais/django-stomp-debug-callback"
repository = "https://github.com/juntossomosmais/django-stomp-debug-callback"
keywords=["django-stomp", "stomp", "django", "development", "django-debug"]

[tool.poetry.dependencies]
python = "^3.7"
django = "~=3.2"
django-stomp = "^5.0.0"

[tool.poetry.dev-dependencies]
### Tests Runner
tox = "^3.24.5"
### Pytest: Essentials
pytest = "^7"
pytest-mock = "^3"
pytest-django = "^4"
pytest-cov = "^3"
pytest-env = "^0"
pytest-xdist = "*"
### Pytest: Add-ons
pytest-icdiff = "^0"
pytest-clarity = "^1"
### Format, lint, static type checker, among others
black = "*"
mypy = "^0"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
autoflake = "^1"
pre-commit = "^2"
types-requests = "*"

[tool.black]
line-length = 120
target_version = ["py37"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | settings.py
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
