[tool.poetry]
name = "django-stomp-debug-callback"
version = "2.0.0"
description = "A simple view to help know what the callback is doing on django-stomp usage"
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
homepage = "https://github.com/juntossomosmais/django-stomp-debug-callback"
repository = "https://github.com/juntossomosmais/django-stomp-debug-callback"
keywords=["django-stomp", "stomp", "django", "development", "django-debug"]

[tool.poetry.dependencies]
python = "^3.10"
django = "*"
django-stomp = "^6.1.0"

[tool.poetry.group.dev.dependencies]
### Tests Runner
tox = "*"
### Pytest: Essentials
pytest = "*"
pytest-mock = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
### Pytest: Add-ons
pytest-icdiff = "*"
pytest-clarity = "*"
### Format, lint, static type checker, among others
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
autoflake = "*"
pre-commit = "*"
types-requests = "*"

[tool.black]
line-length = 120
target_version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | settings.py
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
